--- a/src/style.css
+++ b/src/style.css
@@ -3,6 +3,7 @@ body{
   color: var(--color-white);
   font-family: 'Inter', sans-serif;
   padding: 16px;
+  overflow-x: hidden;
 }
 
 .icon{
@@ -28,7 +29,7 @@ body{
 .grid{
   display: grid;
   grid-template-columns: repeat(12, calc((1200px - (20px * 11)) / 12));
-  gap: 20px;
+  column-gap: 20px;
 }
 
 .header{
@@ -100,5 +101,38 @@ body{
 }
 
 .about{
+  /* position: absolute; */
+}
+
+.about::before{
+  content: '';
   background-color: var(--color-black);
+  position: absolute;
+  width: 160vw;
+  left: -20vw;
+  height: 100%;
+  z-index: -1;
+}
+
+.about__header{
+  grid-column: 1/3;
+  color: var(--color-primary);
+  margin: 0;
+}
+
+.about__text{
+  grid-column: 1/7;
+  margin: 0;
+}
+
+.about__logo{
+  grid-column: 7/12;
+  height: 300px;
+  display: flex;
+  justify-content: center;
+  background-color: var(--color-quaternary);
+}
+
+.about__image{
+  display: block;
 }
