--- a/src/style.css
+++ b/src/style.css
@@ -101,8 +101,9 @@ body{
 }
 
 .about{
-  /* position: absolute; */
+  padding: 150px 0;
   margin: 50px 0;
+  position: relative;
 }
 
 .about::before{
@@ -110,6 +111,8 @@ body{
   background-color: var(--color-black);
   position: absolute;
   width: 160vw;
+  top: 0;
+  left: 0;
   left: -20vw;
   height: 100%;
   z-index: -1;
@@ -123,7 +126,8 @@ body{
 
 .about__text{
   grid-column: 1/7;
-  margin: 0;
+  text-align: justify;
+  text-indent: 4rem;
 }
 
 .about__logo{
@@ -139,21 +143,10 @@ body{
 }
 
 .experience-and-education{
-  /* align-items: center; */
   margin: 50px 0;
+  padding: 150px 0;
+  height: 100vh;
 }
-
-.experience-and-education::before{
-  content: '';
-  background-color: var(--color-secondary);
-  grid-template-rows: auto auto;
-  position: absolute;
-  width: 160vw;
-  left: -20vw;
-  height: 100%;
-  z-index: -1;
-}
-
 
 .experience-and-education__header{
   margin: 0;
