--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -18,9 +18,9 @@ body{
 
 .main{
   display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  justify-items: center;
+  flex-direction: column;
+  align-items: center;
+  overflow: hidden;
 }
 
 .grid{
@@ -106,14 +106,15 @@ body{
   position: relative;
 }
 
+/* FIX IT */
 .about::before{
   content: '';
   background-color: var(--color-black);
   position: absolute;
-  width: 160vw;
+  width: 200vw;
   top: 0;
   left: 0;
-  left: -20vw;
+  left: -40vw;
   height: 100%;
   z-index: -1;
 }
@@ -126,12 +127,11 @@ body{
 
 .about__text{
   grid-column: 1/7;
-  text-align: justify;
   text-indent: 4rem;
 }
 
 .about__logo{
-  grid-column: 7/12;
+  grid-column: 8/12;
   height: 300px;
   display: flex;
   justify-content: center;
@@ -225,7 +225,7 @@ body{
   margin: 0;
   padding: 8px 0;
   font-weight: var(--font-weight-normal);
-  margin-bottom: 40px;
+  margin-bottom: 20px;
 }
 
 .project{
@@ -233,6 +233,7 @@ body{
   background-color: var(--color-quaternary);
   border-radius: var(--border-radius-rounded);
   height: 200px;
+  margin: 20px 0;
 }
 
 /* MAKE THIS MORE GENERIC */
