--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -46,6 +46,9 @@ body{
   border-left: solid 2px var(--color-tertiary);
   padding: 0 16px;
   margin: 0 16px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .text--xl{
@@ -145,7 +148,7 @@ body{
 .experience-and-education{
   margin: 50px 0;
   padding: 150px 0;
-  height: 100vh;
+  min-height: 100vh;
 }
 
 .experience-and-education__header{
@@ -158,7 +161,7 @@ body{
 
 .experience-and-education__list{
   list-style: none;
-  padding-left: 50px;
+  padding-left: 40px;
 }
 
 .experience-and-education__item{
@@ -171,22 +174,23 @@ body{
   content: '';
   position: absolute;
   top: 50%;
-  left: -50px;
+  left: -40px;
   transform:translateY(-50%);
-  width: 40px;
-  height: 40px;
+  width: 30px;
+  height: 30px;
   box-sizing: border-box;
   border-radius: var(--border-radius-circle);
   border: solid 4px var(--color-white);
 }
+
 .experience-and-education__item--checked::before{
   content: '';
   position: absolute;
   top: 50%;
-  left: -50px;
-  transform:translate(33%, -50%);
-  width: 24px;
-  height: 24px;
+  left: -40px;
+  transform:translate(50%, -50%);
+  width: 15px;
+  height: 15px;
   border-radius: var(--border-radius-circle);
   box-sizing: border-box;
   background-color: var(--color-white);
