add hamburge menu on mobile

--- a/src/styles/normalize.css
+++ b/src/styles/normalize.css
@@ -11,7 +11,8 @@
   box-sizing: border-box;
 }
 
- html {
+html {
+   scroll-behavior: smooth;
   line-height: 1.15; /* 1 */
   -webkit-text-size-adjust: 100%; /* 2 */
 }
