--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -69,19 +69,16 @@ body{
 
 .contact{
   display: flex;
-  gap: 32px;
+  gap: 20px;
+  align-items: center;
   margin-right: 16px;
 }
 
-.mobile-nav{
-  display: none;
-}
 
 .hamburger{
   width: 40px;
   height: 40px;
   flex-direction: column;
-  margin-right: 16px;
   justify-content: space-around;
   cursor: pointer;
   display: flex;
