--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -33,16 +33,20 @@ body{
   display: flex;
   justify-content: space-between;
   align-items: center;
-  position: absolute;
   width: 100vw;
   padding: 16px;
   position: fixed;
-  backdrop-filter: blur(2px);
   z-index: 1;
+  pointer-events: none;
+}
+
+.header > *{
+  pointer-events: auto;
 }
 
 .logo{
   display: flex;
+  filter: drop-shadow( 3px 3px 2px rgba(0, 0, 0, .7));
   z-index: 1;
 }
 
@@ -94,6 +98,7 @@ body{
   background-color: var(--color-white);
   transition: transform .3s ease, scale .3s ease;
   z-index: 1;
+  filter: drop-shadow( 3px 3px 2px rgba(0, 0, 0, .7));
 }
 
 .hamburger-checkbox:checked ~ .hamburger > .hamburger__line:first-child{
@@ -108,8 +113,6 @@ body{
   transform:  translateY(-13px) rotate(-45deg);
 }
 
-
-
 .nav-list{
   position: fixed;
   width: 320px;
@@ -122,11 +125,11 @@ body{
   padding: 16px;
   background-color: var(--color-black);
   transform: translateX(100%);
-  transition: transform .5s ease-in-out;
   display: flex;
   flex-direction: column;
   align-items: left;
   padding-bottom: 40px;
+  transition: transform .3s ease-in-out;
 }
 
 .nav-list__item{
@@ -343,10 +346,76 @@ body{
 }
 
 .footer{
-  margin-top: 50px;
-  border-top: solid 2px var(--color-white);
   background-color: var(--color-black);
   width: 100vw;
-  text-align: center;
+  min-height: 100vh;
   padding: 20px 0;
+  justify-content: center;
+  grid-template-rows: auto auto;
+}
+
+.faq{
+  grid-column: 3/11;
+}
+
+.faq-checkbox{
+  display: none;
+}
+
+.faq-list{
+  list-style: none;
+  padding: 0;
+}
+
+.faq__QNA{
+  border-bottom: solid 2px var(--color-white);
+  display: block;
+  padding: 12px;
+  cursor: pointer;
+}
+
+.faq__question::after{
+  content: "";
+  width: 20px;
+  height: 20px;
+  background-color: var(--color-white);
+  position: absolute;
+  right: 0;
+  top: 50%;
+  transform: translateY(-50%);
+  clip-path: polygon(50% 80%, 100% 30%, 50% 50%, 0 30%);
+}
+
+.faq__question{
+  margin: 0;
+  padding: 0;
+  position: relative;
+  font-weight: var(--font-weight-bold);
+}
+
+.faq__answer{
+  display: block;
+  max-height: 0px;
+  font-weight: var(--font-weight-normal);
+  margin: 0;
+  clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
+  transition: max-height .4s ease, clip-path .3s ease, margin-top .3s ease;
+}
+
+.faq-checkbox:checked ~ .faq__QNA >.faq__answer{
+  max-height: 500px;
+  clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+  margin-top: 10px;
+}
+
+.faq-checkbox:checked ~ .faq__QNA >.faq__question::after{
+  transform: scaleY(-1) translateY(50%);
+}
+
+.signature{
+  grid-row: 2/3;
+  grid-column: 1/13;
+  display: flex;
+  align-items: end;
+  justify-content: center;
 }
