--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -86,6 +86,7 @@ body{
   justify-content: space-around;
   cursor: pointer;
   display: flex;
+  z-index: 1;
 }
 
 .hamburger-checkbox{
@@ -99,6 +100,7 @@ body{
   transition: transform .3s ease, scale .3s ease;
   z-index: 1;
   filter: drop-shadow( 3px 3px 2px rgba(0, 0, 0, .7));
+  pointer-events: none;
 }
 
 .hamburger-checkbox:checked ~ .hamburger > .hamburger__line:first-child{
