fixes according to w3c validator

--- a/src/styles/mobile.css
+++ b/src/styles/mobile.css
@@ -25,7 +25,7 @@
     text-align: auto;
   }
 
-  .hamburger-checkbox:checked ~ .hamburger > .nav-list{
+  .hamburger-checkbox:checked ~  .nav-list{
     transform: translateY(0%);
   }
 
