--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -82,9 +82,11 @@ body{
 .hamburger{
   width: 40px;
   height: 40px;
+  display: block;
   flex-direction: column;
   justify-content: space-around;
   cursor: pointer;
+  position: relative;
   display: flex;
   z-index: 1;
 }
@@ -128,7 +130,6 @@ body{
   transform: translateX(100%);
   display: flex;
   flex-direction: column;
-  align-items: left;
   padding-bottom: 40px;
   transition: transform .3s ease-in-out;
 }
@@ -149,7 +150,7 @@ body{
   border: none;
 }
 
-.hamburger-checkbox:checked ~ .hamburger > .nav-list{
+.hamburger-checkbox:checked ~ .nav-list{
   transform: translateX(0%);
 }
 
@@ -359,6 +360,11 @@ body{
   grid-column: 3/11;
 }
 
+.faq__header{
+  font-weight: var(--font-weight-normal);
+  text-align: center;
+}
+
 .faq-checkbox{
   display: none;
 }
@@ -368,11 +374,16 @@ body{
   padding: 0;
 }
 
-.faq__QNA{
+.faq-list__item{
   border-bottom: solid 2px var(--color-white);
+}
+
+.faq__question{
+  position: relative;
+  font-weight: var(--font-weight-bold);
   display: block;
-  padding: 12px;
   cursor: pointer;
+  padding: 12px;
 }
 
 .faq__question::after{
@@ -387,29 +398,23 @@ body{
   clip-path: polygon(50% 80%, 100% 30%, 50% 50%, 0 30%);
 }
 
-.faq__question{
-  margin: 0;
-  padding: 0;
-  position: relative;
-  font-weight: var(--font-weight-bold);
-}
-
 .faq__answer{
   display: block;
   max-height: 0px;
   font-weight: var(--font-weight-normal);
   margin: 0;
   clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
-  transition: max-height .4s ease, clip-path .3s ease, margin-top .3s ease;
+  transition: max-height .4s ease, clip-path .3s ease, padding-bottom .3s ease;
+  padding:  0 12px;
 }
 
-.faq-checkbox:checked ~ .faq__QNA >.faq__answer{
+.faq-checkbox:checked ~ .faq__answer{
   max-height: 500px;
+  padding-bottom: 12px;
   clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
-  margin-top: 10px;
 }
 
-.faq-checkbox:checked ~ .faq__QNA >.faq__question::after{
+.faq-checkbox:checked ~ .faq__question::after{
   transform: scaleY(-1) translateY(50%);
 }
 
