--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -3,7 +3,7 @@
   /* TODO: this naming is terrible, refactor that */
   --color-primary: #0080ff;
   --color-secondary: #002040;
-  --color-tertiary: #0073E6;
+  --color-tertiary: #66AFFF;
   --color-quaternary: #004080;
   --color-quinary: #0060BF;
   --color-border: #1484D3;
