--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -168,8 +168,21 @@ body{
   font-weight: var(--font-weight-normal);
   font-size: 64px;
   margin: 0;
-  grid-column: 6/8;
-  text-align: center;
+  grid-column: 1/13;
+  min-height: 100px;
+  display: flex;
+  align-content: center;
+  justify-content: center;
+}
+
+.start__h1::after{
+  content: '|';
+  animation: blink-caret .8s  infinite;
+}
+
+@keyframes blink-caret {
+  from, to { opacity: 1; }
+  50% { opacity: 0; }
 }
 
 .start__next-section-wrapper{
@@ -413,7 +426,7 @@ body{
 }
 
 .faq-checkbox:checked ~ .faq__answer{
-  max-height: 500px;
+  max-height: 1000px;
   padding-bottom: 12px;
   clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
 }
