fill faq section

--- a/src/styles/normalize.css
+++ b/src/styles/normalize.css
@@ -79,6 +79,11 @@ pre {
 
 a {
   background-color: transparent;
+  color: var(--color-tertiary);
+}
+
+a:visited{
+  color: var(--color-primary);
 }
 
 /**
