--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -160,15 +160,16 @@ body{
 
 .start{
   min-height: 100vh;
-  grid-template-rows: 1fr 1fr;
   align-items: end;
+  grid-template-areas: "h h h h h h h h h h h h"
+                       ". . . . . btn btn . . . . .";
 }
 
 .start__h1{
   font-weight: var(--font-weight-normal);
   font-size: 64px;
   margin: 0;
-  grid-column: 1/13;
+  grid-area: h;
   min-height: 100px;
   display: flex;
   align-content: center;
@@ -186,8 +187,7 @@ body{
 }
 
 .start__next-section-wrapper{
-  grid-column: 6/8;
-  grid-row: 2/3;
+  grid-area: btn;
   display: flex;
   justify-content: center;
 }
@@ -218,6 +218,7 @@ body{
 .about{
   padding: 150px 0;
   position: relative;
+  grid-template-areas: 'content content content content content content logo logo logo logo logo logo';
 }
 
 /* FIX IT */
@@ -233,19 +234,17 @@ body{
   z-index: -1;
 }
 
+.about__content{
+  grid-area: content;
+}
+
 .about__header{
-  grid-column: 1/3;
   color: var(--color-primary);
   margin: 0;
 }
 
-.about__text{
-  grid-column: 1/7;
-  text-indent: 4rem;
-}
-
 .about__logo{
-  grid-column: 8/12;
+  grid-area: logo;
   height: 300px;
   display: flex;
   justify-content: center;
@@ -260,10 +259,11 @@ body{
   margin: 50px 0;
   padding: 150px 0;
   min-height: 100vh;
+  grid-template-areas: 'experience experience experience experience experience experience education education education education education education'
+                         'certs certs certs certs certs certs certs certs certs certs certs certs';
 }
 
 .experience-and-education__header{
-  margin: 0;
   display: block;
   text-align: center;
   padding: 16px 0;
@@ -315,27 +315,25 @@ body{
 }
 
 .experience{
-  grid-column: 2/6;
+  grid-area: experience;
 }
 
 .education{
-  grid-column: 6/12;
+  grid-area: education;
 }
 
 .certs{
-  grid-column: 2/12;
-  grid-row: 2/3;
+  grid-area: certs;
 }
 
 .projects{
-  grid-template-rows: auto auto;
+  grid-template-areas: '. . . . . header header . . . . .'
+                       'project1 project1 project1 project1 project2 project2 project2 project2 project3 project3 project3 project3';
   padding-bottom: 40px;
 }
 
 .projects__header{
-  grid-column: 4/10;
-  border-top: solid 4px var(--color-quinary);
-  border-bottom: solid 4px var(--color-quinary);
+  grid-area: header;
   text-align: center;
   margin: 0;
   padding: 8px 0;
@@ -344,7 +342,6 @@ body{
 }
 
 .project{
-  grid-row: 2/3;
   background-color: var(--color-quaternary);
   border-radius: var(--border-radius-rounded);
   height: 200px;
@@ -353,15 +350,15 @@ body{
 
 /* MAKE THIS MORE GENERIC */
 .project--first{
-  grid-column: 1/5;
+  grid-area: project1;
 }
 
 .project--second{
-  grid-column: 5/9;
+  grid-area: project2;
 }
 
 .project--third{
-  grid-column: 9/13;
+  grid-area: project3;
 }
 
 .footer{
@@ -370,11 +367,12 @@ body{
   min-height: 100vh;
   padding: 20px 0;
   justify-content: center;
-  grid-template-rows: auto auto;
+  grid-template-areas: 'faq faq faq faq faq faq faq faq faq faq faq faq'
+                       'signature signature signature signature signature signature signature signature signature signature signature signature';
 }
 
 .faq{
-  grid-column: 3/11;
+  grid-area: faq;
 }
 
 .faq__header{
@@ -423,13 +421,12 @@ body{
   margin: 0;
   clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
   transition: max-height .4s ease, clip-path .3s ease, padding-bottom .3s ease;
-  line-height: 1.5;
-  padding: 0 20px;
+  padding: 0 12px;
 }
 
 .faq-checkbox:checked ~ .faq__answer{
   max-height: 1000px;
-  padding-bottom: 20px;
+  padding-bottom: 12px;
   clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
 }
 
@@ -438,8 +435,7 @@ body{
 }
 
 .signature{
-  grid-row: 2/3;
-  grid-column: 1/13;
+  grid-area: signature;
   display: flex;
   align-items: end;
   justify-content: center;
