--- a/src/styles/tablet.css
+++ b/src/styles/tablet.css
@@ -13,64 +13,34 @@
     width: 150px;
   }
 
-  .start__h1{
-    grid-column: 1/9;
+  .start{
+    grid-template-areas:
+    "h h h h h h h h"
+    ". . . btn btn . . . ";
   }
 
-  .start__next-section-wrapper{
-    grid-column: 4/6;
-    grid-row: 2/3;
+  .about{
+    grid-template-areas: 'content content content content logo logo logo logo';
   }
 
-  .about__header{
-    grid-column: 1/3;
-
+  .experience-and-education{
+    grid-template-areas:
+    'experience experience experience experience education education education education'
+    'certs certs certs certs certs certs certs certs';
   }
 
-  .about__text{
-    grid-column: 1/5;
-  }
-
-  .about__logo{
-    grid-column: 5/9;
-  }
-
-  .experience{
-    grid-column: 1/5;
-  }
-
-  .education{
-    grid-column: 5/9;
-  }
-
-  .certs{
-    grid-column: 1/9;
-    grid-row: 2/3;
-  }
-
-  .projects__header{
-    grid-column: 3/7;
-  }
-
-  /* MAKE THIS MORE GENERIC */
-  .project--first{
-    grid-column: 1/5;
-  }
-
-  .project--second{
-    grid-column: 5/9;
+  .projects{
+    grid-template-areas: '. . .  header header . . .'
+                       'project1 project1 project1 project1 project2 project2 project2 project2';
   }
 
   .project--third{
     display: none;
   }
 
-  .faq{
-    grid-column: 2/8;
-  }
+  .footer{
+    grid-template-areas: 'faq faq faq faq faq faq faq faq'
+    'signature signature signature signature signature signature signature signature';
 
-  .signature{
-    grid-row: 2/3;
-    grid-column: 1/9;
   }
 }
